--- a/app/src/main/res/layout/layout_ticket_confirmation_details.xml
+++ b/app/src/main/res/layout/layout_ticket_confirmation_details.xml
@@ -141,14 +141,16 @@
                     android:id="@+id/llTicketNameMoviesTicketConfirmation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:weightSum="3"
                     android:layout_below="@+id/llMTicketMoviesTicketConfirmation"
                     android:layout_marginTop="@dimen/margin_10dp"
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvTicketNamesConfirmation"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="2"
                         android:fontFamily="@font/dm_sans_bold"
                         android:gravity="start"
                         tools:text="Gold-G8,G7"
@@ -156,9 +158,10 @@
                         android:textSize="@dimen/text_regular_2x" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/dm_sans"
+                        android:layout_weight="1"
                         android:text="(Screen 2)"
                         android:textColor="@color/colorGrey"
                         android:textSize="@dimen/text_regular_2x" />
