--- a/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
+++ b/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmentMoviesCheckout"
@@ -519,12 +519,12 @@
                     android:textSize="@dimen/text_regular_2x" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvTicketPriceMoviesCancel"
+                    android:id="@+id/tvRefundAmountMoviesCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
                     android:gravity="center_horizontal"
-                    android:text="17000KS"
+                    tools:text="17000KS"
                     android:textColor="@color/colorRefundAmount"
                     android:textSize="@dimen/text_regular_3x" />
 
@@ -541,4 +541,4 @@
 
     </RelativeLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
