--- a/app/src/main/res/layout/fragment_movies_search.xml
+++ b/app/src/main/res/layout/fragment_movies_search.xml
@@ -99,7 +99,7 @@
         android:layout_marginTop="@dimen/margin_30dp"
         android:layout_marginEnd="@dimen/margin_medium_4_n"
         android:layout_marginBottom="@dimen/margin_50dp"
-        android:visibility="gone"
+        android:visibility="visible"
         tools:listitem="@layout/view_holder_movies_home_movies_list" />
 
 </RelativeLayout>
