--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -265,5 +265,15 @@
             android:name="arg_tab_position"
             app:argType="integer"
             android:defaultValue="0" />
+        <argument
+            android:name="arg_movie_list_now_showing"
+            app:argType="com.flexath.themoviebookingapp.ui.utils.MovieSearchData"
+            app:nullable="true"
+            android:defaultValue="@null"/>
+        <argument
+            android:name="arg_movie_list_coming_soon"
+            app:argType="com.flexath.themoviebookingapp.ui.utils.MovieSearchData"
+            app:nullable="true"
+            android:defaultValue="@null"/>
     </fragment>
 </navigation>
