--- a/app/src/main/res/layout/layout_app_bar_movies_cinema.xml
+++ b/app/src/main/res/layout/layout_app_bar_movies_cinema.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical"
     android:background="@color/colorPrimary">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnBackMoviesCinema"
         android:layout_width="@dimen/width_back_arrow_cinema"
         android:layout_height="@dimen/height_back_arrow_cinema"
@@ -15,6 +15,19 @@
         android:layout_marginStart="22dp"
         android:scaleType="centerCrop"
         android:src="@drawable/back_arrow" />
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewMoviesCinema"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/margin_30dp"
+        android:visibility="gone"
+        app:iconifiedByDefault="false"
+        app:queryBackground="@android:color/transparent"
+        app:queryHint="Search the cinema"
+        app:searchIcon="@drawable/ic_baseline_search_white_24dp" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnFilterMoviesCinema"
@@ -37,6 +50,7 @@
         android:src="@drawable/ic_baseline_search_white_24dp" />
 
     <LinearLayout
+        android:id="@+id/llLocationMoviesCinema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
