city name for MoviesCinemaFragment is added

--- a/app/src/main/res/layout/fragment_cinema_home.xml
+++ b/app/src/main/res/layout/fragment_cinema_home.xml
@@ -20,6 +20,7 @@
         android:background="@color/colorSeatBackground"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:paddingTop="@dimen/margin_card_medium_2"
         android:paddingBottom="@dimen/margin_card_medium_2">
 
