--- a/app/src/main/res/layout/layout_app_bar_movies_cinema.xml
+++ b/app/src/main/res/layout/layout_app_bar_movies_cinema.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_vertical"
     android:background="@color/colorPrimary">
 
@@ -72,7 +73,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter"
             android:letterSpacing="-0.02"
-            android:text="Yangon"
+            tools:text="Yangon"
             android:textColor="@color/white"
             android:textSize="@dimen/text_regular_2x"
             android:textStyle="bold|italic" />
