--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -65,6 +65,11 @@
             android:name="arg_movie_id"
             app:argType="integer"
             android:defaultValue="0" />
+        <argument
+            android:name="arg_city_name"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_moviesDetailsHome_to_chooseCinema"
             app:destination="@id/chooseCinemaFragment" />
@@ -82,6 +87,11 @@
             android:defaultValue="@null" />
         <argument
             android:name="arg_movie_id"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <argument
+            android:name="arg_city_name"
             app:argType="string"
             app:nullable="true"
             android:defaultValue="@null" />
