Timeslot background color finished

--- a/app/src/main/res/layout/fragment_movies_seat.xml
+++ b/app/src/main/res/layout/fragment_movies_seat.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmentMoviesSeat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:hardwareAccelerated="true"
+    android:layerType="hardware"
     android:background="@color/colorPrimary"
     tools:context=".ui.fragments.movies.MoviesSeatFragment">
 
@@ -43,11 +45,18 @@
         <androidx.core.widget.NestedScrollView
             android:id="@+id/svSeatsMoviesSeat"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="wrap_content"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            android:hardwareAccelerated="true"
+            android:layerType="hardware"
             android:layout_below="@+id/flCinemaScreenMoviesSeat">
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_below="@+id/flCinemaScreenMoviesSeat"
+                android:hardwareAccelerated="true"
+                android:layerType="hardware"
                 android:layout_height="wrap_content">
 
                 <TextView
@@ -60,42 +69,42 @@
                     android:textColor="@color/colorPrimaryLight"
                     android:textSize="@dimen/text_regular_2x" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvSeatsMoviesSeat"
+                <com.otaliastudios.zoom.ZoomLayout
+                    android:id="@+id/zoomLayoutSeat"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_15dp"
+                    android:layout_height="370dp"
+                    android:focusableInTouchMode="true"
+                    android:focusable="true"
                     android:layout_below="@+id/tvSeatTypeTitleMoviesSeat"
-                    tools:listitem="@layout/view_holder_movies_seat_list" />
+                    android:scrollbars="vertical|horizontal"
+                    app:flingEnabled="true"
+                    app:hasClickableChildren="true"
+                    android:clickable="true"
+                    app:horizontalPanEnabled="true"
+                    app:verticalPanEnabled="true"
+                    app:maxZoom="2.5"
+                    app:maxZoomType="zoom"
+                    app:minZoom="1.0"
+                    app:minZoomType="zoom"
+                    app:oneFingerScrollEnabled="true"
+                    app:overPinchable="true"
+                    app:overScrollHorizontal="false"
+                    app:overScrollVertical="false"
+                    app:scrollEnabled="true"
+                    app:transformation="centerInside"
+                    app:transformationGravity="center_vertical|center_horizontal"
+                    app:zoomEnabled="true">
 
-<!--                <com.otaliastudios.zoom.ZoomLayout-->
-<!--                    android:id="@+id/zoomLayoutSeat"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="450dp"-->
-<!--                    android:scrollbars="vertical|horizontal"-->
-<!--                    app:transformation="centerInside"-->
-<!--                    app:transformationGravity="auto"-->
-<!--                    app:alignment="center"-->
-<!--                    app:overScrollHorizontal="true"-->
-<!--                    app:overScrollVertical="true"-->
-<!--                    app:overPinchable="true"-->
-<!--                    app:horizontalPanEnabled="true"-->
-<!--                    app:verticalPanEnabled="true"-->
-<!--                    app:zoomEnabled="true"-->
-<!--                    app:flingEnabled="true"-->
-<!--                    app:scrollEnabled="true"-->
-<!--                    app:oneFingerScrollEnabled="true"-->
-<!--                    app:twoFingersScrollEnabled="true"-->
-<!--                    app:threeFingersScrollEnabled="true"-->
-<!--                    app:maxZoomType="zoom"-->
-<!--                    app:minZoomType="zoom"-->
-<!--                    app:animationDuration="280"-->
-<!--                    app:hasClickableChildren="false"-->
-<!--                    android:layout_below="@+id/tvSeatTypeTitleMoviesSeat">-->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvSeatsMoviesSeat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true"
+                        android:focusable="true"
+                        android:nestedScrollingEnabled="false"
+                        tools:listitem="@layout/view_holder_movies_seat_list" />
 
-<!--                    -->
-
-<!--                </com.otaliastudios.zoom.ZoomLayout>-->
+                </com.otaliastudios.zoom.ZoomLayout>
 
             </RelativeLayout>
 
@@ -248,18 +257,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
-                    tools:text="2 Tickets"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_ticket" />
+                    android:textSize="@dimen/text_ticket"
+                    tools:text="2 Tickets" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvTicketPriceMoviesSeat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
-                    tools:text="17000KS"
                     android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_regular_3x" />
+                    android:textSize="@dimen/text_regular_3x"
+                    tools:text="17000KS" />
 
             </LinearLayout>
 
@@ -274,4 +283,4 @@
 
     </RelativeLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
