Timeslot spacing is adjusted.

--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -349,11 +349,11 @@
 
                 <RelativeLayout
                     android:id="@+id/rlReleasingDateMoviesDetails"
-                    android:layout_width="370dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="@dimen/margin_10dp"
-                    android:layout_marginEnd="@dimen/margin_10dp"
+                    android:layout_marginStart="@dimen/margin_25dp"
+                    android:layout_marginEnd="@dimen/margin_25dp"
                     android:layout_marginTop="@dimen/margin_30dp"
                     android:background="@drawable/releasing_date_box_background">
 
