--- a/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
@@ -3,16 +3,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingStart="@dimen/margin_medium_2"
-    android:paddingEnd="@dimen/margin_medium_2"
-    android:paddingTop="@dimen/margin_10dp"
-    android:paddingBottom="@dimen/margin_10dp"
+    android:padding="@dimen/margin_14dp"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/itemCinemaTimes"
-        android:layout_width="@dimen/margin_95dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:background="@drawable/movies_show_times_background"
