--- a/app/src/main/res/layout/view_holder_movies_ticket_checkout_food_orders_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_ticket_checkout_food_orders_list.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivCancelSnack"
             android:layout_width="@dimen/width_checkout_icon"
             android:layout_height="@dimen/width_checkout_icon"
             android:layout_marginEnd="@dimen/margin_medium"
